tests/fixtures/invalid/pow_none_bytes_bytes.py
# Cannot call pow() with None, Bytes, Bytes
x = pow(None, b"hello", b"hello")
